code cleanup
see ehrbase/project_management/issues/288